--- a/config/database.yml
+++ b/config/database.yml
@@ -50,4 +50,6 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: kosodate_app_production
+  username: kosodate_app
+  password: <%= ENV["KOSODATE_APP_DATABASE_PASSWORD"] %>
