--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,4 @@ test:
 #
 production:
   <<: *default
-  database: kosodate_app_production
-  username: kosodate_app
-  password: <%= ENV["KOSODATE_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
